@@ -237,7 +237,7 @@ public class StatisticsServlet extends org.dspace.app.webui.servlet.DSpaceServle
         catch (IOException e) 
         {
             // FIXME: no error handing yet
-            System.exit(0);
+            throw new RuntimeException(e.getMessage(),e);
         } 
         
         // FIXME: there's got to be a better way of doing this
